30-ingress-rules-sgs/main.tf
resource "aws_security_group_rule" "bastion_laptop" {
    type = "ingress" 
    security_group_id = local.bastion_sg_id
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 22
    protocol = "-1"
    to_port = 22
}

resource "aws_security_group_rule" "mongodb_bastion" {
    type = "ingress"
    security_group_id = local.mongodb_sg_id
    source_security_group_id = local.bastion_sg_id
    from_port = 22
    protocol = "tcp"
    to_port = 22
}

resource "aws_security_group_rule" "redis_bastion" {
    type = "ingress"
    security_group_id = local.redis_sg_id
    source_security_group_id = local.bastion_sg_id
    from_port = 22
    protocol = "tcp"
    to_port = 22
}

resource "aws_security_group_rule" "rabbitmq_bastion" {
    type = "ingress"
    security_group_id = local.rabbitmq_sg_id
    source_security_group_id = local.bastion_sg_id
    from_port = 22
    protocol = "tcp"
    to_port = 22
}

resource "aws_security_group_rule" "mysql_bastion" {
    type = "ingress"
    security_group_id = local.mysql_sg_id
    source_security_group_id = local.bastion_sg_id
    from_port = 22
    protocol = "tcp"
    to_port = 22
}

resource "aws_security_group_rule" "mongodb_catalogue" {
    type = "ingress"
    security_group_id = local.mongodb_sg_id
    source_security_group_id = local.catalogue_sg_id
    from_port = 27017
    protocol = "tcp"
    to_port = 27017
}

resource "aws_security_group_rule" "mongodb_user" {
    type = "ingress"
    security_group_id = local.mongodb_sg_id
    source_security_group_id = local.user_sg_id
    from_port = 27017
    protocol = "tcp"
    to_port = 27017
}

resource "aws_security_group_rule" "redis_user" {
    type = "ingress"
    security_group_id = local.redis_sg_id
    source_security_group_id = local.user_sg_id
    from_port = 6379
    protocol = "tcp"
    to_port = 6379
}

resource "aws_security_group_rule" "redis_cart" {
    type = "ingress"
    security_group_id = local.redis_sg_id
    source_security_group_id = local.cart_sg_id
    from_port = 6379
    protocol = "tcp"
    to_port = 6379
}

resource "aws_security_group_rule" "mysql_shipping" {
    type = "ingress"
    security_group_id = local.mysql_sg_id
    source_security_group_id = local.shipping_sg_id
    from_port = 3306
    protocol = "tcp"
    to_port = 3306
}

resource "aws_security_group_rule" "rabbitmq_payment" {
    type = "ingress"
    security_group_id = local.rabbitmq_sg_id
    source_security_group_id = local.payment_sg_id
    from_port = 5672
    protocol = "tcp"
    to_port = 5672
}

resource "aws_security_group_rule" "backend_alb_bastion" {
    type = "ingress"
    security_group_id = local.backend_alb_sg_id
    source_security_group_id = local.bastion_sg_id
    from_port = 80
    to_port = 80
    protocol = "tcp"
}

resource "aws_security_group_rule" "frontend_alb_public" {
  type              = "ingress"
  security_group_id = local.frontend_alb_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port         = 443
  protocol          = "tcp"
  to_port           = 443
}

resource "aws_security_group_rule" "catalogue_bastion" {
    type = "ingress"
    security_group_id = local.catalogue_sg_id
    source_security_group_id = local.bastion_sg_id
    from_port = 22
    to_port = 22
    protocol = "tcp"
}
